Fix the word overflow in plurk response, add width limit

--- a/plurk.css
+++ b/plurk.css
@@ -163,8 +163,13 @@ body {
 	border-radius:			5px;
 	opacity:			0.6;
 	z-index:			825;
-	width:				110%;
+	width:				110%; 
 }
+/* 修正噗浪回應一行字太多會看不到的問題，另外設定 width */
+.plurk_box table{
+	width: 96%;
+}
+
 .plurk_cnt:hover {
 	-moz-box-shadow:	0px 0px 5px rgba(0, 0, 0, 0.8);
 	-webkit-box-shadow:	0px 0px 5px rgba(0, 0, 0, 0.8);
